prepare for rest registry report page

--- a/ebooks-ng/src/app/admin/adminActions.component.html
+++ b/ebooks-ng/src/app/admin/adminActions.component.html
@@ -1,4 +1,12 @@
 <div class="row">
  <p>To view file candidates in bookstore, delete or register them, click on button below</p>
+</div>
+<div class="row">
  <button routerLink='/admin/fileCandidates'>File Candidates</button>
+</div>
+<div class="row">
+ <p>To view backend rest calls statistics, click on button below</p>
+</div>
+<div class="row">
+ <button routerLink='/admin/restStats'>REST Statistics</button>
 </div>
